--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <footer>
       <div class="social-icons">
         <div class="social-icon">
-          <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
         </div>
         <div class="social-icon">
-          <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+          <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
         </div>
         <div class="social-icon">
-          <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
       <p class="attribution">
